...
    <string name="app_name">JustInTime</string>

    <!-- Fields -->
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="rePassword">Re-Enter Password</string>
    <string name="name">Name</string>
    <string name="preferredName">Preferred Name</string>
    <string name="phoneNumb">Phone Number</string>
    <string name="phone">Phone</string>
    <string name="prefContactMethod">Preferred Contact Method</string>
    <string name="emergencyContact">Emergency Contact</string>
    <string name="dateOfBirth">Date of Birth</string>
    <string name="relation">Relation</string>

    <!-- Update Password Area -->
    <string name="passwordChangeFields">Change Password</string>
    <string name="oldPassword">Enter old Password</string>
    <string name="newPassword">Enter new Password</string>
...
    <string name="directReport">Direct Report</string>
    <string name="contractType">ContractType</string>
    <string name="role">Role</string>

    <!-- Buttons -->
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="cancel">Cancel</string>
    <string name="next">Next</string>

    <!-- Email Field Errors -->
    <string name="enterEmail">Please enter an email</string>
    <string name="invalidEmailError">Entered Email is Invalid</string>
    <string name="emailOrPasswordError">Email Address or Password is Incorrect</string>

    <!-- Password Enter Errors -->
    <string name="enterPassword">Please enter a password</string>
    <string name="passwordNoCapitals">Password should contain at least one uppercase character</string>
    <string name="passwordNoLowercase">Password should contain at least on lowercase character</string>
...
    <string name="passwordDoNotMatch">Passwords do not match</string>

    <!-- Profile -->
    <string name="save">Save</string>

    <!-- Name Errors -->
    <string name="noNameProvided">Please enter a name</string>

    <!-- Phone Number Errors -->
    <string name="invalidPhoneNumb">Please enter a valid phone number</string>


    <string name="dobError">Please Enter a Valid Date</string>
    <string name="timeError">Please Enter a Valid Time</string>

    <!-- Shift -->
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="location">Location</string>
...
    <string name="sibling">Sibling</string>
    <string name="significationOther">Significant Other</string>
    <string name="carer">Carer</string>
    <string name="other">Other</string>

    <!-- Titles -->
    <string name="profile">Profile</string>
    <string name="user_information">User Information</string>

    <!-- Contract Types -->
    <string name="part_time">Part-Time</string>
    <string name="salary">Salary</string>
    <string name="contractor">Contractor</string>
...
